--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     ]
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   },
   "browserslist": {
     "production": [
@@ -51,8 +51,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-class-properties": "^7.27.1",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.27.1",
+    "@babel/plugin-transform-numeric-separator": "^7.27.1",
+    "@babel/plugin-transform-optional-chaining": "^7.28.5",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "autoprefixer": "^10.4.21",
+    "glob": "^11.0.3",
     "postcss": "^8.5.6",
+    "rimraf": "^6.1.0",
+    "svgo": "^4.0.0",
     "tailwindcss": "^3.4.18"
   }
 }
