--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/node": "^16.18.126",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.21",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.548.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
     "tailwind-merge": "^3.3.1",
     "typescript": "^4.9.5",
