--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.4",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.21",
-    "ajv": "^8.17.1",
-    "ajv-keywords": "^5.1.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^10.16.16",
-    "lucide-react": "^0.548.0",
+    "@radix-ui/react-slot": "1.2.4",
+    "@testing-library/dom": "10.4.1",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "27.5.2",
+    "@types/node": "16.18.126",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.21",
+    "ajv": "8.17.1",
+    "ajv-keywords": "5.1.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "framer-motion": "10.12.16",
+    "lucide-react": "0.548.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "tailwind-merge": "^3.3.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "tailwind-merge": "3.3.1",
+    "typescript": "5.1.3",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,17 +53,17 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-class-properties": "^7.27.1",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.27.1",
-    "@babel/plugin-transform-numeric-separator": "^7.27.1",
-    "@babel/plugin-transform-optional-chaining": "^7.28.5",
-    "@babel/plugin-transform-private-methods": "^7.27.1",
-    "@rollup/plugin-terser": "^0.4.4",
-    "autoprefixer": "^10.4.21",
-    "glob": "^11.0.3",
-    "postcss": "^8.5.6",
-    "rimraf": "^6.1.0",
-    "svgo": "^4.0.0",
-    "tailwindcss": "^3.4.18"
+    "@babel/plugin-transform-class-properties": "7.27.1",
+    "@babel/plugin-transform-nullish-coalescing-operator": "7.27.1",
+    "@babel/plugin-transform-numeric-separator": "7.27.1",
+    "@babel/plugin-transform-optional-chaining": "7.28.5",
+    "@babel/plugin-transform-private-methods": "7.27.1",
+    "@rollup/plugin-terser": "0.4.4",
+    "autoprefixer": "10.4.21",
+    "glob": "11.0.3",
+    "postcss": "8.5.6",
+    "rimraf": "6.1.0",
+    "svgo": "4.0.0",
+    "tailwindcss": "3.4.18"
   }
 }
