--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
     "tailwind-merge": "3.3.1",
-    "typescript": "5.1.3",
+    "typescript": "^4.9.5",
     "web-vitals": "2.1.4"
   },
   "scripts": {
