--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
     "tailwind-merge": "3.3.1",
-    "typescript": "^4.9.5",
+    "typescript": "4.9.5",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -65,5 +65,9 @@
     "rimraf": "6.1.0",
     "svgo": "4.0.0",
     "tailwindcss": "3.4.18"
+  },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
