--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "clsx": "2.1.1",
     "framer-motion": "10.12.16",
     "lucide-react": "0.548.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "tailwind-merge": "3.3.1",
     "typescript": "4.9.5",
