--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "2.1.1",
     "framer-motion": "10.12.16",
     "lucide-react": "0.548.0",
+    "nodemailer": "^7.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
