--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "framer-motion": "12.23.28",
     "lucide-react": "0.548.0",
     "nodemailer": "^7.0.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "^5.0.1",
     "tailwind-merge": "3.3.1",
     "typescript": "4.9.5",
@@ -69,6 +69,10 @@
     "tailwindcss": "3.4.18"
   },
   "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "overrides": {
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
